[gd_scene load_steps=12 format=3 uid="uid://c4yqq50jxq2k2"]

[ext_resource type="Script" path="res://MAIN.gd" id="1_1yyad"]
[ext_resource type="Texture2D" uid="uid://cb4nsoxmj435t" path="res://star.png" id="2_iakl7"]
[ext_resource type="Texture2D" uid="uid://baec5vqgj1soi" path="res://background.png" id="2_klh7y"]
[ext_resource type="Texture2D" uid="uid://b8jh01vo7o7t3" path="res://Falooda.png" id="4_1v5g1"]

[sub_resource type="Environment" id="Environment_0112b"]
background_mode = 3
background_energy_multiplier = 3.71
ambient_light_color = Color(0.466667, 0.839216, 0.996078, 1)
ambient_light_energy = 3.87
glow_enabled = true
glow_intensity = 1.35

[sub_resource type="Theme" id="Theme_0drm7"]
default_base_scale = 0.43
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_aowbj"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_d8qmj"]
emission_shape = 1
emission_sphere_radius = 128.0
particle_flag_disable_z = true
direction = Vector3(1, -1.225, 0)
spread = 180.0
flatness = 0.52
initial_velocity_min = 216.98
initial_velocity_max = 216.98
orbit_velocity_min = -1000.0
orbit_velocity_max = -1000.0
scale_min = 0.0
color = Color(1, 0.639216, 0.752941, 1)
turbulence_enabled = true
turbulence_noise_strength = 8.93
turbulence_noise_scale = 7.3
anim_speed_min = 1.35
anim_speed_max = 1.35

[sub_resource type="LabelSettings" id="LabelSettings_5ntu5"]
font_color = Color(1, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yl7oi"]
font_color = Color(1, 0.686275, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_b5lpt"]
font_size = 166
font_color = Color(0.713726, 0, 0.180392, 1)

[node name="UI LOADER" type="Node2D"]
script = ExtResource("1_1yyad")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1193.0
offset_bottom = 678.0
color = Color(0, 0.254902, 0.396078, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.317647, 0.239216, 0.698039, 1)
position = Vector2(636.226, 352.499)
rotation = -1.5708
scale = Vector2(0.290828, 0.363506)
texture = ExtResource("2_klh7y")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(604, 128.613)
scale = Vector2(0.624, 0.707)
texture = ExtResource("4_1v5g1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0112b")

[node name="Button" type="Button" parent="."]
offset_left = 430.0
offset_top = 238.0
offset_right = 776.0
offset_bottom = 305.0
theme = SubResource("Theme_0drm7")
text = "3RD_PERSON_CHARACTER_CONTROLLER"

[node name="Button" type="Button" parent="Button"]
layout_mode = 0
offset_left = -12.0
offset_top = 97.0
offset_right = 358.0
offset_bottom = 164.0
theme = SubResource("Theme_0drm7")
text = "ORTH_3RD_PERSON_CHARACTER_CONTROLLER"

[node name="Button" type="Button" parent="Button/Button"]
layout_mode = 0
offset_left = 12.0
offset_top = 91.0
offset_right = 358.0
offset_bottom = 158.0
theme = SubResource("Theme_0drm7")
text = "Grass Lands"

[node name="Button" type="Button" parent="Button/Button/Button"]
layout_mode = 0
offset_left = 576.0
offset_top = 168.0
offset_right = 695.0
offset_bottom = 206.0
theme = SubResource("Theme_0drm7")
text = "about/guide"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_aowbj")
position = Vector2(1056, 601)
process_material = SubResource("ParticleProcessMaterial_d8qmj")
texture = ExtResource("2_iakl7")
lifetime = 16.38
speed_scale = 6.42
fixed_fps = 38

[node name="Label" type="Label" parent="."]
offset_left = 9.0
offset_top = 615.0
offset_right = 277.0
offset_bottom = 641.0
text = "(c) STUDIO WHATEVER GREEN 2023"
label_settings = SubResource("LabelSettings_5ntu5")

[node name="Label2" type="Label" parent="."]
offset_left = 487.0
offset_top = 506.0
offset_right = 711.0
offset_bottom = 584.0
text = "press: h
to return to the home page 
from whatever scene"
label_settings = SubResource("LabelSettings_yl7oi")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = -246.0
offset_top = 222.0
offset_right = 1448.0
offset_bottom = 601.0
text = "DONT WORK"
label_settings = SubResource("LabelSettings_b5lpt")
horizontal_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button/Button" to="." method="_on_button_pressed_2"]
[connection signal="pressed" from="Button/Button/Button" to="." method="_on_button_pressed_3"]
[connection signal="button_down" from="Button/Button/Button/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button/Button/Button/Button" to="." method="_on_button_button_up"]
